--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,5 +1,7 @@
 ---
 hibernate:
+    format_sql: true
+    use_sql_comments: true
     cache:
         queries: false
         use_second_level_cache: true
