--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:hibernate4"
     compile "org.hibernate:hibernate-ehcache"
+    compile 'org.grails.plugins:spring-security-core:3.0.4'
     console "org.grails:grails-console"
     profile "org.grails.profiles:web:3.1.1"
     runtime "org.grails.plugins:asset-pipeline"
