--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.5.0"
         classpath "org.grails.plugins:hibernate4:5.0.0"
         classpath "com.siprell.plugins:bootstrap-framework:1.0.3"
+        classpath 'org.grails.plugins:database-migration:2.0.0.RC4'
     }
 }
 
@@ -59,6 +60,8 @@ dependencies {
     profile "org.grails.profiles:web:3.1.1"
     runtime "org.grails.plugins:asset-pipeline"
     runtime "com.h2database:h2"
+    runtime 'mysql:mysql-connector-java'
+    runtime 'org.grails.plugins:database-migration:2.0.0.RC4'
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
